--- a/MVC_Project/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MVC_Project/Areas/Admin/Views/Categories/Index.cshtml
@@ -19,9 +19,9 @@
                 <td>@item.Name</td>
                <td>
                         <a href="#" class="btn btn-outline-info">Details</a>
-                        <a href="#" class="btn btn-outline-primary">Edit</a>
-                        <a href="#" class="btn btn-outline-danger">Delete</a>
-               </td>
+                        <a href="/Admin/Categories/Edit/@item.Id" class="btn btn-outline-primary">Edit</a>
+                        <a href="/Admin/Categories/Remove/@item.Id" class="btn btn-outline-danger">Delete</a>
+                    </td>
             </tr>
             }
         </tbody>
